<resources>
    <string name="app_name">易词典</string>
    <string name="more">更多</string>
    <string name="back">返回</string>
    <string name="confirm">确认</string>
    <string name="failed_to_load_click_here_to_try_again">加载失败，点击此处重试</string>
    <string name="failed_to_load_click_the_screen_to_try_again">加载失败，点击屏幕重试</string>
    <string name="loading">加载中…</string>
    <string name="progressing">处理中…</string>
    <string name="save_success">保存成功</string>
    <string name="save_image_success_desc">图片已保存至%1$s</string>
    <string name="save_file_success_desc">文件已保存至%1$s</string>
    <string name="page_loading">正在载入…</string>
    <string name="switch_pager">切换页面</string>
    <string name="photo_current_of_all">%1$d / %2$d</string>
    <string name="loading_failure">加载失败</string>
    <string name="save_image">保存图片</string>
    <string name="share_image">分享图片</string>
    <string name="save_failure">保存失败</string>
    <string name="no_share_app_available">没有共享程序可用</string>
    <string name="share_failure">分享失败</string>
    <string name="delete">删除</string>
    <string name="undo_delete">撤销删除</string>
    <string name="undo_operate">撤销操作</string>
    <string name="easy_dict">易词典</string>
    <string name="grammar_check">语法检查</string>
    <string name="check">检查</string>
    <string name="enter_text_to_check">输入要检查的英文文本</string>
    <string name="search_in_dict">在词典中查询</string>
    <string name="copied">已将内容复制到剪贴板</string>
    <string name="copy_success">复制成功</string>
    <string name="pwd_eee">提取码: %1$s</string>
    <string name="copied_to_trans">已将文本复制到剪贴板，您可能需要手动输入以进行翻译</string>
    <string name="retype">重新输入</string>
    <string name="checking">检查中…</string>
    <string name="some_suggestion_eee">修改建议：%1$s → %2$s</string>
    <string name="reason_eee">原因：%1$s</string>
    <string name="correct_sentence_eee">正确用法：%1$s</string>
    <string name="raw_sentence_eee">原始句子：%1$s</string>
    <string name="no_errors_were_found">您提交的英语文本未发现错误。</string>
    <string name="click_here_to_search">点击此处进行搜索</string>
    <string name="input_word_or_sentence">输入单词或句子</string>
    <string name="voice_search_not_available">您的设备不支持该功能</string>
    <string name="notify_record_permission_desc">您需要开启录音权限，否则无法使用该功能。</string>
    <string name="notify_write_external_permission_desc">您需要开启读写权限，否则无法使用该功能。</string>
    <string name="notify_eee_permission_desc">您需要开启%1$s，否则无法使用该功能。</string>
    <string name="please_speech">请说</string>
    <string name="go_wrong_try_again">似乎发生错误了，请重新输入</string>
    <string name="speech_input">语音输入</string>
    <string name="retry">重试</string>
    <string name="invalid_input">无效输入</string>
    <string name="input">输入</string>
    <string name="record_deleted">记录已删除</string>
    <string name="bilingual_example">双语例句</string>
    <string name="authoritative_example">权威例句</string>
    <string name="synonym">同义词</string>
    <string name="thesaurus">同反义词</string>
    <string name="antonym">反义词</string>
    <string name="rel_word">同根词</string>
    <string name="wikipedia">维基百科</string>
    <string name="BaiduBaike">百度百科</string>
    <string name="english_english_dictionary">英英词典</string>
    <string name="corinthian_dictionary">科林斯高阶词典</string>
    <string name="uk_voice">UK /%1$s/</string>
    <string name="us_voice">US /%1$s/</string>
    <string name="loading_fail_desc">加载失败，已显示离线结果</string>
    <string name="reload">重新加载</string>
    <string name="no_result">无结果</string>
    <string name="syn">SYN</string>
    <string name="ant">ANT</string>
    <string name="cleartext_not_permitted">不允许明文通讯</string>
    <string name="explain_with_eee">对于释义 \"%1$s\"</string>
    <string name="root_from_eee">"Root-from: "</string>
    <string name="source_from_eee">Source - %1$s</string>
    <string name="source_">Source:</string>
    <string name="source_from_eeee">Source: %1$s</string>
    <string name="wikipedia_en">wikipedia</string>
    <string name="web_page_cannot_be_opened">网页无法打开</string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="share">分享</string>
    <string name="loaded_all_data">已加载所有数据</string>
    <string name="are_you_looking_for">您是否是要找：</string>
    <string name="definition">释义</string>
    <string name="loading_voice">发音加载中</string>
    <string name="play_failure">播放失败</string>
    <string name="not_result_desc">查询结果为空，请检查搜索文本</string>
    <string name="clear_all_history">清除所有搜索记录</string>
    <string name="web_trans">网络释义</string>
    <string name="special_trans">专业释义</string>
    <string name="etym">词源</string>
    <string name="video_example">视频例句</string>
    <string name="baike">百科</string>
    <string name="nothing_to_access">没有什么可以访问的</string>
    <string name="cited_times_eee">引用次数: %1$s</string>
    <string name="web_phrase">网络短语</string>
    <string name="daily_sentence">每日一句</string>
    <string name="empty_string" />
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="hint">提示</string>
    <string name="phrase">词组</string>
    <string name="def_str">--</string>
    <string name="configure_simple_dict_error_desc">配置基础词典失败，请尝试重装应用</string>
    <string name="word_list">单词列表</string>
    <string name="word_list_desc">单词列表 (背单词)</string>
    <string name="info">详情</string>
    <string name="no_words_in_this_category">此分类下暂时没有单词</string>
    <string name="word_book_empty_in_this_category">此单词本为空</string>
    <string name="all_words">全部单词</string>
    <string name="word_clas_num_eee">%1$s: %2$d</string>
    <string name="mei">美</string>
    <string name="ying">英</string>
    <string name="switch_to_eee_voice">已切换至%1$s式发音</string>
    <string name="switch_list">切换列表</string>
    <string name="word_mark_learned">单词已标记为已学</string>
    <string name="collect">收藏</string>
    <string name="collect_success">已收藏</string>
    <string name="word_mark_learning">单词已标记为在学</string>
    <string name="word_mark_collect">单词已取消收藏</string>
    <string name="suggest_search">推荐搜索</string>
    <string name="learning_words">在学单词</string>
    <string name="reload_list_desc">是否重置背单词，这将会重置所有单词书并清空背单词数据，且无法撤销，确认继续吗？</string>
    <string name="dict">词典</string>
    <string name="momo">墨墨</string>
    <string name="bing">必应</string>
    <string name="collins">科林斯</string>
    <string name="webster">韦氏</string>
    <string name="cambridge_he">剑桥-中英</string>
    <string name="cambridge_ee">剑桥-全英</string>
    <string name="oxford">牛津</string>
    <string name="jinshan">金山</string>
    <string name="youdao">有道</string>
    <string name="haici">海词</string>
    <string name="langwen">朗文</string>
    <string name="ciyuan">词源</string>
    <string name="translation">翻译</string>
    <string name="handian">汉典</string>
    <string name="google">谷歌</string>
    <string name="deepl">DeepL</string>
    <string name="tencent">腾讯</string>
    <string name="baidu">百度</string>
    <string name="history">历史记录</string>
    <string name="word_book">单词本</string>
    <string name="my_word_book">我的单词本</string>
    <string name="my_collect">我的收藏</string>
    <string name="add_to_word_book">已添加至%1$s</string>
    <string name="operation_failure">操作失败</string>
    <string name="remove_from_word_book">已从我的单词本中移出</string>
    <string name="edit_word_book">编辑单词本</string>
    <string name="add_word_book">添加单词本</string>
    <string name="word_book_already_exist">单词本已存在</string>
    <string name="please_input">请输入</string>
    <string name="add_word_book_success_eee">已创建单词本%1$s</string>
    <string name="select_word_book">选择单词本</string>
    <string name="rename">重命名</string>
    <string name="rename_word_book_success_eee">已重命名为%1$s</string>
    <string name="confirm_delete_word_book_desc">这将会删除整个单词本，单词本中的单词也将一并删除，且无法撤销，确认删除吗？</string>
    <string name="select_all">全选</string>
    <string name="please_select_item">请选择项目</string>
    <string name="unselect_all">全不选</string>
    <string name="select_item_eee">已选择%1$d项</string>
    <string name="move_word_book">已移至分类%1$s</string>
    <string name="confirm_delete_word_desc">这将会删除已选单词，且无法撤销，确认删除吗？</string>
    <string name="move_to_category">移至分类</string>
    <string name="app_info">应用信息</string>
    <string name="app_open_source">开源仓库</string>
    <string name="app_developer">开发者：情绪涛</string>
    <string name="app_open_source_link">https://github.com/QX-Tao/EasyDict</string>
    <string name="app_icon_source">图标素材</string>
    <string name="open_source_license">开源相关</string>
    <string name="settings">设置</string>
    <string name="dark_mode">深色模式</string>
    <string name="about_app">关于应用</string>
    <string name="appearance">界面外观</string>
    <string name="welcome_screen">欢迎界面</string>
    <string name="dict_card">词典卡片</string>
    <string name="tools">工具</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_history">清除搜索记录</string>
    <string name="other">其它</string>
    <string name="word_learn">单词学习</string>
    <string name="def_voice">默认发音</string>
    <string name="def_voice_desc">适用于查词和背单词</string>
    <string name="quick_search">快速查词</string>
    <string name="quick_search_desc">通知栏快速查词</string>
    <string name="quick_search_desc1">点击此处开始查词</string>
    <string name="quick_search_notification_channel">QuickSearchNotificationChannel</string>
    <string name="clear_word_book">清空单词本</string>
    <string name="clear_word_book_desc1">这将会删除所有单词本，单词本中的单词也将一并删除，且无法撤销，确认继续吗？</string>
    <string name="clear_history_desc">清除搜索框下全部历史记录</string>
    <string name="clear_history_desc1">这将会清除所有的单词搜索记录，且无法撤销，确认继续吗？</string>
    <string name="clear_word_book_desc">清空并删除所有单词本</string>
    <string name="app_browser">应用内浏览器</string>
    <string name="app_browser_desc">打开外部链接时，不使用外部浏览器，而是在应用内查看</string>
    <string name="tv_clear_cache_desc">清除应用程序在使用中产生的缓存文件</string>
    <string name="app_icon_source_link">https://www.iconfont.cn</string>
    <string name="app_version">v%1$s</string>
    <string name="clear_cache_success">清除缓存成功</string>
    <string name="system_theme_color">系统主题色</string>
    <string name="system_theme_color_desc">使用系统主题颜色作为应用主题颜色</string>
    <string name="theme_color">主题颜色</string>
    <string name="theme">主题</string>
    <string name="recite_word">背单词</string>
    <string name="voice">发音</string>
    <string name="switch_book">切换书籍</string>
    <string name="browser">浏览器</string>
    <string name="clear_word_list">重置背单词</string>
    <string name="clear_word_list_desc">重置所有单词书并清空背单词数据</string>
    <string name="clear_word_list_success">重置背单词成功</string>
    <string name="clear_word_book_success">清空单词本成功</string>
    <string name="clear_history_success">清除搜索记录成功</string>
    <string name="refresh">刷新</string>
    <string name="copy_url">复制链接</string>
    <string name="exit">退出</string>
    <string name="voice_input">语音输入</string>
    <string name="grammar_check_desc">检查语法错误，让你的表达更加准确</string>
    <string name="word_book_desc">将查询的单词或句子添加进单词本，方便复习和记忆</string>
    <string name="have_learned">已学</string>
    <string name="ci">词</string>
    <string name="progress">进度</string>
    <string name="percent">%</string>
    <string name="no_book_select_desc">当前尚未选择单词书</string>
    <string name="warning">警告</string>
    <string name="web_request_download_file_desc">网页请求下载文件，是否前往下载？</string>
    <string name="web_request_open_app">网页请求打开应用，是否继续？</string>
    <string name="jump_date">日期跳转</string>
    <string name="back_to_today">回到今天</string>
    <string name="count_down">倒计时</string>
    <string name="function_setting">功能管理</string>
    <string name="add_count_down">添加倒计时</string>
    <string name="please_input_count_down_name">请输入倒计时名称</string>
    <string name="mt_title_count_down">%1$s: %2$d天</string>
    <string name="mt_title_count_down_today">%1$s: 今天</string>
    <string name="mt_title_count_down_tomorrow">%1$s: 明天</string>
    <string name="dict_trans">词典/翻译</string>
    <string name="count_down_set_success">添加倒计时成功</string>
    <string name="crash_log">崩溃日志</string>
    <string name="display_earlier_version">显示较早版本</string>
    <string name="error_message">错误信息</string>
</resources>