<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:fitsSystemWindowsInsets="top|start|end"
    tools:context=".ui.activity.bughandler.BugHandlerActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mt_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:menu="@menu/bug_handler_menu"
        app:navigationContentDescription="@string/back"
        app:title="@string/crash_log"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_content"
        android:clipToPadding="false"
        app:fitsSystemWindowsInsets="bottom"
        app:layout_constraintTop_toBottomOf="@id/mt_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true">

        <TextView
            android:contentDescription="@string/error_message"
            android:id="@+id/tv_error"
            android:textIsSelectable="true"
            android:textColorHighlight="?attr/colorSecondaryContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="?attr/colorOnSurface"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="@dimen/text_size_small" />

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>