<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:text="@string/add_count_down"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="24dp"
        android:textSize="@dimen/text_size_huge"
        android:layout_gravity="center"
        android:textColor="?attr/colorOnSurface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        app:cardBackgroundColor="?attr/colorSurfaceContainer"
        app:cardCornerRadius="@dimen/card_view_radius_medium"
        app:cardElevation="0dp">

        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:singleLine="true"
            style="@style/EditTextStyle"
            android:drawablePadding="12dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:focusable="true"
            android:clickable="true"
            android:hint="@string/please_input_count_down_name"
            android:maxLines="1"
            android:maxLength="8"
            android:autofillHints="text"
            app:drawableStartCompat="@drawable/ic_edit2" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="?attr/colorSurfaceContainer"
        app:cardCornerRadius="@dimen/card_view_radius_medium"
        app:cardElevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <DatePicker
            android:id="@+id/dp_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:textStyle="bold"
            android:clickable="true"
            android:background="@drawable/bg_ripple_r20"
            android:gravity="center"
            android:layout_height="40dp"
            android:layout_width="64dp"
            android:textSize="@dimen/text_size_medium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/cancel"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_height="40dp"
            android:layout_width="64dp"
            android:clickable="true"
            android:background="@drawable/bg_ripple_r20"
            android:textSize="@dimen/text_size_medium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/confirm"/>

    </LinearLayout>

</LinearLayout>