<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorSurface"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:fitsSystemWindowsInsets="top"
    tools:context=".ui.fragment.dict.DictExtraFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mt_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:navigationContentDescription="@string/back"
        app:title="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_content"
        android:clipToPadding="false"
        app:fitsSystemWindowsInsets="bottom"
        app:layout_constraintTop_toBottomOf="@id/mt_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_app_update_hint"
                app:cardCornerRadius="@dimen/card_view_radius_medium"
                app:cardElevation="0dp"
                app:cardBackgroundColor="?attr/colorPrimaryContainer"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="16dp"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:id="@+id/tv_app_update_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_app_update_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:visibility="gone"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackground"
                android:id="@+id/ll_display_earlier_version"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_down"
                    android:layout_width="18dp"
                    android:layout_height="18dp"/>

                <TextView
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/display_earlier_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.qxtao.easydict.ui.view.LoadingView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mt_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/lv_loading"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/colorSurface"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <com.qxtao.easydict.ui.view.LoadFailedView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mt_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:loadFailedViewHintText="@string/failed_to_load_click_the_screen_to_try_again"
        android:visibility="gone"
        android:id="@+id/lv_load_failed"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/colorSurface"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>